Closed Bug 1717008 Opened 5 years ago Closed 5 years ago

Windows "error: use of undeclared identifier 'mEmbedderAccessibleDoc'" bustage with --disable-accessibility

Categories

(Core :: Disability Access APIs, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- unaffected
firefox91 --- fixed

People

(Reporter: RyanVM, Assigned: RyanVM)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

In file included from Unified_cpp_dom_ipc0.cpp:20:
C:/Users/Ryan/repos/mozilla/dom/ipc/BrowserBridgeParent.cpp(132,9): error: use of undeclared identifier 'mEmbedderAccessibleDoc'
    if (mEmbedderAccessibleDoc && !mEmbedderAccessibleDoc->IsShutdown()) {
        ^
C:/Users/Ryan/repos/mozilla/dom/ipc/BrowserBridgeParent.cpp(132,36): error: use of undeclared identifier 'mEmbedderAccessibleDoc'
    if (mEmbedderAccessibleDoc && !mEmbedderAccessibleDoc->IsShutdown()) {
                                   ^
C:/Users/Ryan/repos/mozilla/dom/ipc/BrowserBridgeParent.cpp(133,7): error: use of undeclared identifier 'mEmbedderAccessibleDoc'
      mEmbedderAccessibleDoc->RemovePendingOOPChildDoc(this);
      ^

Adding an ifdef guard to the newly-added code appears to work fine.

Pushed by rvandermeulen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/21d8e5875564 Add ACCESSIBILITY ifdef guard to avoid bustage with --disable-accessibility. r=eeejay
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: