Bug 1717008 - Add ACCESSIBILITY ifdef guard to avoid bustage with --disable-accessibility. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D118176